--- a/.github/workflows/build-test-pipeline.yml
+++ b/.github/workflows/build-test-pipeline.yml
@@ -3,25 +3,22 @@ name: Build and Test
 on: [push]
 
 jobs:
-  build:
+  build_and_test:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
+      
       - name: Build a Docker image for Service A
         run: |
           cd service_a
           docker build . -t service_a
+      
+      - name: Test Service A
+        run: |
+          docker run service_a pytest
+      
       - name: Build a Docker image for Service B
         run: |
           cd service_b
           docker build . -t service_b
-        
-  test:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Test Service A
-        run: |
-          docker run service_a pytest
