added test for service B to pipeline

--- a/.github/workflows/build-test-pipeline.yml
+++ b/.github/workflows/build-test-pipeline.yml
@@ -22,3 +22,7 @@ jobs:
         run: |
           cd service_b
           docker build . -t service_b
+
+      - name: Test Service B
+        run: |
+          docker run service_b pytest
